sopc2dts: Deprecate DTPropNumber and DTPropHexNumber in favour of using DTProperty directly
Signed-off-by: Walter Goossens <waltergoossens@home.nl>